# smalltalk80-2026

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Config.xcconfig  LICENSE  Local.xcconfig.example  PRIVACY.md  README.md  THIRD_PARTY_LICENSES  WIP.md  build.bat  build_arm64.bat  build_release.bat  todo.txt
.github/workflows/: release-linux.yml
app/apple/: ContentView.swift  Info.plist  MetalRenderer.swift  MetalView.swift  README.md  St80MTKView.swift  build-macos-app.sh  main.swift
app/apple-catalyst/: AboutView.swift  AcknowledgementsView.swift  AppDelegate.swift  AutoLaunchSplashView.swift  ContentView.swift  ControlStripView.swift  DocumentExporter.swift  DownloadProgressRow.swift  ImageLibraryView.swift  ImageManager.swift  ImageRow.swift  Info.plist  MetalRenderer.swift  MetalView.swift  NewImageView.swift  README.md  SettingsView.swift  Shaders.metal  St80Image.swift  St80InputController.swift  St80MTKView.swift  build-catalyst-app.sh
app/dos/: CMakeLists.txt  KbdInt16.cpp  KbdInt16.hpp  Launcher.cpp  Launcher.hpp  MouseInt33.cpp  MouseInt33.hpp  README.md  VbeDisplay.cpp  VbeDisplay.hpp  st80_dos_main.cpp
app/linux/: CMakeLists.txt  Launcher.cpp  Launcher.hpp  README.md  st80_linux_main.cpp
app/windows/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  Json.cpp  Json.hpp  Launcher.cpp  Launcher.hpp  README.md  st80-win-icon.rc  st80-win.manifest  st80-win.rc  st80_windows_main.cpp
cmake/: DosPackaging.cmake  LinuxPackaging.cmake  WindowsPackaging.cmake  toolchain-djgpp.cmake
cmake/Platform/: MSDOS.cmake
docs/: architecture.md  bluebook-references.md  changes.md  dos-plan.md  dos.md  image-preprocessing.md  interpreter-audit.md  ios-plan.md  jit-plan.md  performance.md  plan.md  release.md  testing.md  todo-mac.md  todo.md  trace-verification.md
packaging/: st80-images-manifest.json
packaging/linux/: st80.desktop
packaging/windows/: AppxManifest.xml.in  build-release.ps1  gen-store-assets.ps1  pack-msix.ps1  pack-msixbundle.ps1
packaging/windows/Assets/: README.md
resources/: .gitkeep
resources/windows/: README.md
scripts/: .gitkeep  build-xcframework.sh  generate-appicon.swift
src/core/: BitBlt.cpp  BitBlt.hpp  Interpreter.cpp  Interpreter.hpp  ObjectMemory.cpp  ObjectMemory.hpp  Oops.hpp  RealWordMemory.hpp  core_init.cpp
src/core/hal/: IFileSystem.hpp  IHal.hpp
src/include/: .gitkeep  Bridge.h
src/platform/apple/: .gitkeep  AppleBridge.cpp  AppleHal.cpp  AppleHal.hpp  CMakeLists.txt  EventQueue.hpp
src/platform/common/: EventQueue.hpp
src/platform/dos/: CMakeLists.txt  DosBridge.cpp  DosHal.cpp  DosHal.hpp  DosHostFileSystem.hpp  EventQueue.hpp  HostFileSystem.hpp
src/platform/headless/: HeadlessHal.hpp
src/platform/linux/: CMakeLists.txt  LinuxBridge.cpp  LinuxHal.cpp  LinuxHal.hpp
src/platform/posix/: HostFileSystem.hpp  PosixFileSystem.hpp
src/platform/win/: HostFileSystem.hpp  WindowsFileSystem.hpp
src/platform/windows/: CMakeLists.txt  WindowsBridge.cpp  WindowsHal.cpp  WindowsHal.hpp
st80.xcodeproj/: project.pbxproj
st80.xcodeproj/xcshareddata/xcschemes/: St80.xcscheme
tests/: CMakeLists.txt  bridge_api_test.cpp  core_smoke_test.cpp  deeprun_check.sh  dos_dosiz_gate.sh  trace2_check.sh
tools/: CMakeLists.txt  Json.cpp  Json.hpp  st80_gui_test.cpp  st80_probe.cpp  st80_run.cpp  st80_validate.cpp
